# finvariant

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: framework.py
finvariant/: __init__.py  _result.py  check.py  model.py  rules.py
tests/: test_check.py  test_model.py  test_validation_suite.py  validation_cases.json
tests/cases/: amazon-fy2024.json  apple-fy2024.json  broken-accounting-equation.json  broken-cash-ending-tie.json  broken-cash-flow-net-change.json  broken-income-statement-footing.json  broken-operating-cash-flow-footing.json  broken-retained-earnings.json  consistent-two-period.json  johnson-johnson-fy2024.json  meta-fy2024.json  microsoft-fy2024-fy2023.json  microsoft-fy2024.json  nvidia-fy2025.json  tesla-fy2024.json
